<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HTC Dot Breaker</string>
    <string name="action_settings">SETTINGS</string>
    <string name="action_game_stats">GAME STATS</string>
    
    <string name="action_bar_title_select_level">" SELECT LEVEL "</string>
    <string name="action_bar_title_game_stats">" GAME STATS "</string>
    <string name="BestScore">HIGH SCORE</string>
    <string name="BricksHit">BRICKS BROKEN</string>
    <string name="PlayTime">PLAY TIME</string>
    <string name="Death">LOSSES</string>
    <string name="LevelPass">LEVEL</string>
    <string name="BallTraveled">DISTANCE TRAVELED</string>
    
    
	<string name="tips_hint">CLOSE YOUR CASE TO PLAY</string>
    <string name="tips_rotate">Rotate to control direction</string>
    <string name="tips_up">Swipe up to start</string>
    <string name="tips_down">Swipe down to pause</string>
    
    <string name="dialog_battery_title">Dot Breaker</string>
    <string name="dialog_battery_message">Playing this game uses the display’s highest brightness setting and may reduce battery life.</string>
    <string name="dialog_battery_checkbox_message">Don\'t show this again.</string>
    <string name="dialog_congratulation_title">Congratulations!!</string>
    <string name="dialog_congratulation_message">You beat all of the levels. Stay tuned for more exciting challenges.</string>
    <string name="dialog_congratulation_checkbox_message">Don\'t show me again</string>
    
    <string name="toast_pause">Game paused.</string>
    
</resources>
