<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dot_breaker_bg" >
	
	
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/action_bar_h"
	    android:background="@drawable/dot_breaker_bkg_top_full" >
	    	
	    <com.htc.dotbreaker.StrokeTextView
		    android:id="@+id/strokeTextView_title_game_status"
			android:text="@string/action_bar_title_game_stats"

			style="@style/ActionBarTitleStrokeText" />
	</RelativeLayout>
	<ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:scrollbars="none" android:overScrollMode="never" >
	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="@dimen/margin_l" >
		
		<RelativeLayout style="@style/GameStatusRelativeLayout" android:layout_height="@dimen/game_stats_v_firstrow" >
			<TextView
		        android:id="@+id/textView_BestScore"
		        android:text="@string/BestScore"
		        style="@style/GameStatusTextViewItemFirstRow" />
	        
<!-- 	        <TextView -->
<!-- 		        android:id="@+id/textView_PTS" -->
<!-- 		        android:text="@string/PTS" -->
<!-- 		        style="@style/GameStatusTextViewUnit" /> -->
	        
	        <TextView
		        android:id="@+id/textView_BestScore_Numeric"
		        android:layout_toLeftOf="@+id/textView_PTS"
		        style="@style/GameStatusTextViewNumberFirstRow" />
	   	</RelativeLayout>
	   	 
	   	<View style="@style/GameStatusDivider" />
	   	
	   	<RelativeLayout style="@style/GameStatusRelativeLayout" >
	       	<TextView
		        android:id="@+id/textView_BricksHit"
		        android:text="@string/BricksHit"
		        style="@style/GameStatusTextViewItemEvenRow" />
	        
<!-- 	        <TextView -->
<!-- 		        android:id="@+id/textView_HITS" -->
<!-- 		        android:text="@string/HITS" -->
<!-- 		        style="@style/GameStatusTextViewUnit" /> -->
	        
	        <TextView
		        android:id="@+id/textView_BricksHit_Numeric"
		        android:layout_toLeftOf="@+id/textView_HITS"
		        style="@style/GameStatusTextViewNumberOtherRowWithoutUnit"
		        android:layout_marginRight="@dimen/game_stats_h2_margin_secondrow" />
	   	</RelativeLayout>
	   	
	   	<View style="@style/GameStatusDivider" />
	   	
	   	<RelativeLayout style="@style/GameStatusRelativeLayout" >
	       	<TextView
		        android:id="@+id/textView_PlayTime"
		        android:text="@string/PlayTime"
		        style="@style/GameStatusTextViewItemOddRow" />
	        
	        <TextView
		        android:id="@+id/textView_MINS"
		        android:text="@string/MINS"
		        style="@style/GameStatusTextViewUnit"
		        android:layout_marginRight="@dimen/game_stats_h2_margin_thirdrow" />
	        
	        <TextView
		        android:id="@+id/textView_PlayTime_Numeric_M"
		        android:layout_toLeftOf="@+id/textView_MINS"
		        android:layout_marginRight="@dimen/game_stats_h1_margin_number_to_unit"
		        style="@style/GameStatusTextViewNumberOtherRow" />
	        
	        <TextView
		        android:id="@+id/textView_HOURS"
		        android:text="@string/HOURS"
		        style="@style/GameStatusTextViewUnit"
		        android:layout_alignParentRight="false"
		        android:layout_toLeftOf="@+id/textView_PlayTime_Numeric_M"
		        android:layout_marginRight="@dimen/game_stats_h1_margin_unit_to_number" />
	        
	        <TextView
		        android:id="@+id/textView_PlayTime_Numeric_H"
		        android:layout_toLeftOf="@+id/textView_HOURS"
		        android:layout_marginRight="@dimen/game_stats_h1_margin_number_to_unit"
		        style="@style/GameStatusTextViewNumberOtherRow" />
	   	</RelativeLayout>
	   	
	   	<View style="@style/GameStatusDivider" />
	   	
	   	<RelativeLayout style="@style/GameStatusRelativeLayout" >
	       	<TextView
		        android:id="@+id/textView_Death"
		        android:text="@string/Death"
		        style="@style/GameStatusTextViewItemEvenRow" />
	        
<!-- 	        <TextView -->
<!-- 		        android:id="@+id/textView_TIMES" -->
<!-- 		        android:text="@string/TIMES" -->
<!-- 		        style="@style/GameStatusTextViewUnit" /> -->
	        
	        <TextView
		        android:id="@+id/textView_Death_Numeric"
		        android:layout_toLeftOf="@+id/textView_TIMES"
		        style="@style/GameStatusTextViewNumberOtherRowWithoutUnit"
		        android:layout_marginRight="@dimen/game_stats_h2_margin_secondrow" />
	   	</RelativeLayout>
	   	
	   	<View style="@style/GameStatusDivider" />
	   	
	   	<RelativeLayout style="@style/GameStatusRelativeLayout" >
	       	<TextView
		        android:id="@+id/textView_LevelPass"
		        android:text="@string/LevelPass"
		        style="@style/GameStatusTextViewItemOddRow" />
	        
<!-- 	        <TextView -->
<!-- 		        android:id="@+id/textView_LEVEL" -->
<!-- 		        android:text="@string/LEVEL" -->
<!-- 		        style="@style/GameStatusTextViewUnit" /> -->
	        
	        <TextView
		        android:id="@+id/textView_LevelPass_Numeric"
		        android:layout_toLeftOf="@+id/textView_LEVEL"
		        style="@style/GameStatusTextViewNumberOtherRowWithoutUnit"
		        android:layout_marginRight="@dimen/game_stats_h2_margin_secondrow" />
	   	</RelativeLayout>
	   	
	   	<View style="@style/GameStatusDivider" />
	   	
	   	<RelativeLayout style="@style/GameStatusRelativeLayout" >
	       	<TextView
		        android:id="@+id/textView_BallTravelled"
		        android:text="@string/BallTraveled"
		        style="@style/GameStatusTextViewItemEvenRow" />
	        
	        <TextView
		        android:id="@+id/textView_MILES"
		        android:text="@string/MILES"
		        style="@style/GameStatusTextViewUnit"
		        android:layout_marginRight="@dimen/game_stats_h2_margin_thirdrow"/>
	        
	        <TextView
		        android:id="@+id/textView_BallTravelled_Numeric"
		        android:layout_toLeftOf="@+id/textView_MILES"
		        android:layout_marginRight="@dimen/game_stats_h1_margin_number_to_unit"
		        style="@style/GameStatusTextViewNumberOtherRow" />
	   	</RelativeLayout>
	   	
	   	<View 
			android:layout_width="fill_parent" 
			android:layout_height="@dimen/action_bar_h" />
   	
   	</LinearLayout>
   	</ScrollView>

</LinearLayout>

