<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/tips_animation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tips_animation_layout_height"
        android:background="@android:color/black" >

        <ImageView
            android:id="@+id/animation"
            android:layout_width="@dimen/tips_animation_square_length"
            android:layout_height="@dimen/tips_animation_square_length"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/tips_animation_margin_top"
            android:src="@drawable/tips_animation" />

        <TextView
            android:id="@+id/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/tips_hint_margin_bottom"
            android:text="@string/tips_hint"
            android:textColor="#ffffff"
            android:textSize="@dimen/dot_breaker_10" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tips_divider_margin"
        android:layout_marginRight="@dimen/tips_divider_margin"
        android:scaleType="fitXY"
        android:src="@drawable/dot_breaker_list_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_breaker_tips_rotate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_m"
            android:gravity="center_vertical"
            android:text="@string/tips_rotate"
            android:textColor="@android:color/black"
            android:textAppearance="@style/Tips_list_primary_m" />
    </LinearLayout>

    <ImageView
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tips_divider_margin"
        android:layout_marginRight="@dimen/tips_divider_margin"
        android:scaleType="fitXY"
        android:src="@drawable/dot_breaker_list_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_breaker_tips_up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_m"
            android:gravity="center_vertical"
            android:text="@string/tips_up"
            android:textColor="@android:color/black"
            android:textAppearance="@style/Tips_list_primary_m" />
    </LinearLayout>

    <ImageView
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tips_divider_margin"
        android:layout_marginRight="@dimen/tips_divider_margin"
        android:scaleType="fitXY"
        android:src="@drawable/dot_breaker_list_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dot_breaker_tips_down" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_m"
            android:gravity="center_vertical"
            android:text="@string/tips_down"
            android:textColor="@android:color/black"
            android:textAppearance="@style/Tips_list_primary_m" />
    </LinearLayout>

</LinearLayout>